--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,7 @@
 <p>Find me in app/views/pages/home.html.erb</p>
 <h2>Lorem Ipsum:</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae tincidunt magna. Sed in ipsum quis lacus vulputate congue a ut mauris. Praesent sollicitudin ut sapien ut dapibus. Sed mollis, mi vel euismod tempus, felis felis vulputate lacus, sit amet venenatis purus justo nec metus. Nunc vitae aliquet urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas dictum orci a ex condimentum bibendum.</p>
+
+<%= link_to '12 Lizards', '/lizards/12' %>
+<%= link_to '444 Lizards', '/lizards/444' %>
+<%= link_to '9672 Lizards', '/lizards/9672' %>
