--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,7 @@
   </head>
 
   <body>
+  	<%= render partial: 'common/header' %>
     <%= yield %>
-    <%= link_to 'Home', '/' %>
-    <%= link_to 'About', about_url %>
   </body>
 </html>
